# PANAMA

./: .codespell-ignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pdm.toml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release-drafter.yml  release.yml
admin/: config.h  download_corsika.sh
corsika_tools/: nbstreamreader.py  parallel_run.py
docs/: api.rst  cli.rst  conf.py  examples.rst  index.rst  introduction.md  requirements.txt
docs/examples/: complete.ipynb  plot_spectrum.ipynb
panama/: __init__.py  __main__.py  _logo.py  _nbstreamreader.py  cli.py  constants.py  corsika_to_hdf5.py  nbstreamreader.py  numba.py  parallel_run.py  prompt.py  read.py  run.py  version.py  weights.py
panama/cli/: __init__.py  cli.py  corsika_to_hdf5.py  run.py
panama/fluxes/: __init__.py  cosmic_ray_fluxes.py  flux.py  fluxes.py  gsf_data_table.txt  muon_fluxes.py  myon_fluxes.py
tests/: test_cli.py  test_fluxes.py  test_logo.py  test_meta.py  test_prompt.py  test_read.py  test_run.py  test_weights.py
tests/files/: DAT000000  DAT000001  DAT000002  DAT000003  DAT000004  DAT000005  DAT000006  DAT000007  DAT000008  DAT000009  DAT000010  DAT000011  DAT000012  DAT000013  DAT000014  DAT000015  DAT000016  DAT000017  DAT000018  DAT000019  DAT000020  DAT000021  DAT000022  DAT000023  DAT000024  DAT000025  DAT000026  DAT000027  DAT000028  DAT000029  DAT000030  DAT000031  DAT000032  DAT000033  DAT000034  DAT000035  DAT000036  DAT000037  DAT000038  DAT000039  (+13 more)
tests/files/compare/: DAT000000  DAT000001
tests/files/noEHIST/: DAT101001
