[tool.poetry]
name = "corsika-panama"
version = "0.5.0"
description = "PANdas And Multicore utils for corsikA7"
authors = ["Ludwig Neste <ludwig.neste@tu-dortmund.de>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "panama" }]
homepage = "https://github.com/The-Ludwig/PANAMA"
repository = "https://github.com/The-Ludwig/PANAMA"
documentation = "https://github.com/The-Ludwig/PANAMA#readme"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.12"
corsikaio =  "^0.3"
numpy = "^1.23.4"
pandas = "^2.0.0"
click = "^8.1.3"
particle = "^0.21.0"
tqdm = "^4.64.1"
tables = "^3.8.0"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
coverage = "^7.1.0"
pre-commit = "^3.0.4"
sphinx = "^6.1.3"
m2r2 = "<0.3.3"
sphinx-rtd-theme = "^1.2.0"
sphinx-click = "^4.4.0"
ruff = "^0.0.252"
mypy = "^1.0.1"
types-tqdm = "^4.65.0.1"
codespell = "^2.2.4"
matplotlib = "^3.7.1"

[tool.poetry.scripts]
panama = 'panama.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
addopts = [
    "-ra",
]
testpaths = [
    "tests",
]
log_cli_level = "DEBUG"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "C4",          # flake8-comprehensions
  "ISC",         # flake8-implicit-str-concat
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
extend-ignore = [
  "PLR",   # Design related pylint codes
  "E501",  # Line too long
  "B905"       # strict= parameter of zip. (not in py3.8)
]
target-version = "py311"
src = ["panama"]

[tool.mypy]
files = [
  "panama/**",
]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_decorators = false
enable_error_code = [
  "ignore-without-code",
  "truthy-bool",
  "redundant-expr",
]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "tests"
follow_imports = "skip"
strict = false
