[project]
authors = [
    {name = "Ludwig Neste", email = "ludwig.neste@fysik.su.se"},
]
license = {text = "MIT"}
requires-python = ">= 3.8"
dependencies = [
    "corsikaio>=0.3",
    "numpy",
    "pandas",
    "click>=8.1.3",
    "particle>=0.21.0",
    "tqdm>=4.64.1",
    "scipy>=1.10.1",
    "ipython>=8.12.3",
    "fluxcomp>=0.1.2",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.3",
]
name = "corsika-panama"
description = "\"PANdas And Multicore utils for corsikA7\" -- A python toolkit for CORSIKA7"
readme = "README.md"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/The-Ludwig/PANAMA"
repository = "https://github.com/The-Ludwig/PANAMA"
documentation = "https://panama.readthedocs.io/en/latest/"

[project.scripts]
panama = "panama.cli:cli"

[project.optional-dependencies]
hdf = [
    "tables>=3.8.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers"
]
testpaths = [
    "tests",
]
log_cli_level = "DEBUG"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
target-version = "py311"
src = ["panama"]

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "C4",          # flake8-comprehensions
  "ISC",         # flake8-implicit-str-concat
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
ignore = [
  "PLR",   # Design related pylint codes
  "E501",  # Line too long
  "B905"       # strict= parameter of zip. (not in py3.8)
]

[tool.ruff.lint.per-file-ignores]
# Things we don't really want to test in a notebook
# (valid LaTeX code which does not need to be in a raw-string gets flagged)
"*.ipynb" = ["I001", "T201", "W605"]

[tool.mypy]
files = [
  "panama/**",
]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_decorators = false
enable_error_code = [
  "ignore-without-code",
  "truthy-bool",
  "redundant-expr",
]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "tests"
follow_imports = "skip"
strict = false

[tool.pdm]
plugins = [
    "sync-pre-commit-lock"
]
version = { source = "file", path = "panama/version.py" }

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.10.0",
    "pytest>=7.2.0",
    "coverage>=7.1.0",
    "pre-commit>=3.0.4",
    "sphinx>=6.1.3",
    "sphinx-click>=4.4.0",
    "ruff>=0.0.252",
    "mypy>=1.0.1",
    "types-tqdm>=4.65.0.1",
    "codespell>=2.2.4",
    "matplotlib>=3.7.1",
    "toml>=0.10.2",
    "types-toml>=0.10.8.7",
    "python-lsp-server>=1.8.2",
    "pydata-sphinx-theme>=0.14.4",
    "notebook>=7.0.6",
]

[tool.pdm.build]
includes = ["panama"]
